--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,9 @@
-* {
-	box-sizing: border-box;
-}
+@import url('reset.css');
+@import url('grid.css');
+@import url('buttons.css');
 
 body {
 	font-family: 'Open Sans', sans-serif;
-	margin: 0; /* Espaçamento para fora */
-	padding: 0; /* Espaçamento para dentro */
-}
-
-a {
-	text-decoration: none;
-}
-
-#header .btn{
-	background-color: rgb(84, 209, 84);
-	border-radius: 30px;
-	padding: 10px 30px;
-	font-size: 16px;
-}
-
-#header .btn:hover{
-	background-color: rgb(84, 160, 84);
 }
 
 #header nav a {
@@ -50,6 +33,7 @@ a {
 
 #header a {
 	color: #ffffff;
+	transition: ease .5s all;
 }
 
 #header nav {
@@ -67,5 +51,9 @@ a {
 	left: 0;
 	top: 50%;
 	transform: translate(0, -50%);
+	text-align: center;
+}
+
+#how-it-work{
 	text-align: center;
 }
