--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 @import url('reset.css');
 @import url('grid.css');
 @import url('buttons.css');
+@import url('typography.css');
+@import url('icons.css');
 
 body {
 	font-family: 'Open Sans', sans-serif;
+	color: rgb(130, 130, 130);
 }
 
 #header nav a {
@@ -56,4 +59,7 @@ body {
 
 #how-it-work{
 	text-align: center;
+	padding: 30px 0px 30px 0px; 
+
 }
+
