--- a/css/icons.css
+++ b/css/icons.css
@@ -2,12 +2,12 @@
 	display: inline-block;
 	width: 140px;
 	height: 140px;
-	background-color: #e1f3e1;
+	background-color: rgb(242, 242, 242);
 	border-radius: 30px;
 	position: relative;
 }
 
-.material-icons {
+.icon-container .material-icons {
 	display: block;
 	font-size: 85px;
 	color: rgb(84, 209, 84);
