--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,33 @@ body {
 	text-align: center;
 }
 
-#how-it-work{
+#customers, #how-it-work{
 	text-align: center;
 	padding: 30px 0px 30px 0px; 
 
+}
+
+#customers {
+	background-color: rgb(242, 242, 242);
+}
+
+#customers .btn {
+	margin-top: 50px;
+	background-color: rgb(220, 220, 220);
+	color: rgb(130, 130, 130);
+}
+
+#customers .btn:hover {
+	background-color: rgb(130, 130, 130);
+	color: rgb(220, 220, 220);
+}
+
+#customers .btn .material-icons{
+	vertical-align: middle;
+	font-size: 16px;
+	}
+
+#customers .container{
+	max-width: 1200px;
 }
 
