--- a/css/icons.css
+++ b/css/icons.css
@@ -17,3 +17,19 @@
 	transform: translate(-50%, -50%);
 	cursor: default;
 }
+
+.img-box-round {
+	display: inline-block;
+	border-radius: 100%;
+	overflow: hidden;
+}
+
+.img-box-label:before {
+	content: '';
+	display: block;
+	width: 50%;
+	height: 60px;
+	border-right: 3px solid rgb(32, 123, 32);
+	background-color: transparent;
+	margin-bottom: 10 px;
+}
