--- a/css/buttons.css
+++ b/css/buttons.css
@@ -6,8 +6,19 @@
 	padding: 10px 20px;
 	text-decoration: none;
 	transition: ease .5s all;
+	border: none;
+	cursor: pointer;
 }
 
 .btn:hover{
+	background-color: rgb(84, 160, 84);
+}
+
+.btn.orange {
+	background-color: #fed136;
+	transition: ease .9s all; /* Efeito de Transição no botão */
+}
+
+.btn.orange:hover {
 	background-color: rgb(84, 160, 84);
 }
