--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,11 @@ body {
 
 #header h1{
 	font-size: 54px;
+	line-height: 60px;
 }
 
 #header{
-	background: #000 no-repeat fixed;
+	background: #000 no-repeat fixed center;
 	background-size: cover; /* Cobre o campo com a imagem */
 	color: #fff;
 	width: 100%;
@@ -120,4 +121,10 @@ body {
 	text-align: center;
 	background-color: rgb(34, 34, 34);
 	padding: 10px;
+}
+
+@media (max-width: 992px) {
+	#header, #header nav {
+		text-align: center;
+	}
 }
