--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -7,10 +7,14 @@
 #us h1 {
   font-family: "Great Vibes";
   font-size: 90px;
+  color: rgba(255, 0, 13, 0.829);
 }
 
 #us h2 {
   font-family: "Great Vibes";
+  color: rgba(255, 0, 13, 0.829);
+  text-transform: lowercase;
+  font-size: 40px;
 }
 
 #customers {
