--- a/css/pages/presentes.css
+++ b/css/pages/presentes.css
@@ -1,21 +1,13 @@
 @import url("../style.css");
 
 #header.page-quem-somos {
-  background-image: url("../../images/background-quem-somos.jpg");
+  background-image: url("../../images/background-presentes.jpeg");
 }
 
-#noivos h1 {
+#presentes h1 {
   font-family: "Great Vibes";
   font-size: 90px;
   color: rgba(255, 0, 13, 0.829);
-}
-
-#noivos h2 {
-  font-family: "Great Vibes";
-  color: rgba(255, 0, 13, 0.829);
-  text-transform: lowercase;
-  font-size: 40px;
-  font-style: bold;
 }
 
 #intro h2,
